--- a/index.html
+++ b/index.html
@@ -10,64 +10,87 @@
 
 <div class="About-Me"
 <body>
+    <!-- header and nav section start -->
     <header>
-        <h1>DoengesBA</h1>
+        <div><h1>Brandon Doenges</h1></div>
         <nav>
-          <ul>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Resources</a></li>
-              <li><a href="#">Resume</a></li>
+            <ul>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#my-work">My Work</a>
+                </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+                <li>
+                    <a href="" target="_blank">My Resume</a>
+                </li>
             </ul>
-          </nav>
-        </header>
-    </body>
-</div>        
-<main>
-    <section>
-        <article>
-            <div class="flex-container">
-            <h2>About Me</h2>
-            </div>
+        </nav>
+    </header>
+
+    <!-- hero image section start -->
+    <section class="hero">
+        <div class="quote">
+            <blockquote>
+                <p id="quote-text">
+                    Most people are other people. Their thoughts are someone else's opinions, <br>their lives a mimicry, their passions a quotation.
+                </p>
                 <p>
-            Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World
-            Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World 
-            Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World 
-            Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World 
-            Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World 
+                    --Oscar Wilde<br>
                 </p>
-  
-
-            <div class="flex-container">
-            <h2>Work</h2>
-            </div>
-                <section>
-                    <ul>
-                        <li><img src="https://via.placeholder.com/200" alt="Placeholder Image"</li>
-                        <li><img src="https://via.placeholder.com/200" alt="Placeholder Image"</li>
-                        <li><img src="https://via.placeholder.com/200" alt="Placeholder Image"</li>
-                        <li><img src="https://via.placeholder.com/200" alt="Placeholder Image"</li>
-                    </ul>
-                </section>      
-        </article>
+            </blockquote>
+        </div>
     </section>
-</main>
 
-<footer>
-    <section>
-        <article>
-            <div class="flex-container">
-            <h2>Contact Me</h2>
+    <!-- about me section start -->
+    <section id="about-me" class="about-me">
+        <div class="title">
+            <h2>About Me</h2>
+        </div>
+        
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eleifend enim at eros finibus luctus. Integer dapibus ex consequat risus pulvinar cursus. Vivamus sit amet mauris congue, tincidunt massa lacinia, varius purus. Curabitur tincidunt fringilla hendrerit. Morbi eleifend purus sed nunc laoreet sollicitudin. Aenean convallis hendrerit condimentum. Maecenas semper, sem quis iaculis gravida, leo turpis ullamcorper lectus, quis placerat quam neque in arcu. Ut interdum odio sed eros ornare ultricies. Sed imperdiet non mi ac eleifend. In pretium, risus quis feugiat commodo, lacus ex pulvinar libero, non rutrum nibh tortor et magna.
+                <br><br>
+                Donec blandit aliquet rutrum. Donec et pharetra nulla. Nullam ultrices nisi vitae luctus volutpat. Nunc vitae magna ultricies, vulputate erat vitae, lacinia ipsum. Ut eu nisl at magna vulputate sagittis. Etiam eros orci, dictum sed risus in, iaculis eleifend diam. Ut dapibus nulla sit amet mauris tristique viverra. Mauris varius sed ligula a accumsan. Praesent feugiat euismod velit, eu vestibulum libero scelerisque sed. Aliquam finibus turpis arcu, nec convallis dui semper id. Ut nisl lacus, molestie ac ornare sit amet, suscipit mollis sapien.
+            </p>
+        </div>
+    </section>
+
+    <!-- my work section start -->
+    <section id="my-work" class="my-work">
+        <div class="title"><h2>My Work</h2></div>
+        <div class = "projects-grid-wrapper">
+            <div class="projects-grid">
+
             </div>
-                <p>Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World
-            Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World 
-            Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World 
-            Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World 
-            Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World 
-                </p>
-        </article>        
-    </section>               
-</footer>
+        </div>
+    </section>
 
+    <!-- contact info section -->
+    <footer id="contact-me">
+        <div class="title"><h2>Contact Me</h2></div>
+        <div class="content-wrapper">
+            <div id="contact-list">
+                <ul>
+                    <li>
+                        <a href="mailto:brandonandsugey@gmail.com">Email</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/DoengesBA" target="_blank">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="https://www.https://www.linkedin.com/in/brandon-d-633596251/" target="_blank">LinkedIn</a>
+                    </li>
+                    <li>
+                        <p>(555) 555-5555</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
